--- a/development/sass/style.scss
+++ b/development/sass/style.scss
@@ -1,7 +1,7 @@
 /*!
 Theme Name: GulpTester
 */
-
+@import "_variable";
 @import "../node_modules/bootstrap/scss/bootstrap-reboot";
 @import "../node_modules/bootstrap/scss/bootstrap-grid";
 @import "../node_modules/bootstrap/scss/_utilities";
@@ -11,4 +11,6 @@ Theme Name: GulpTester
 @import "../node_modules/bootstrap/scss/_tooltip";
 @import "../node_modules/bootstrap/scss/_transitions";
 
+
 @import "_header";
+
