--- a/development/sass/_header.scss
+++ b/development/sass/_header.scss
@@ -2,4 +2,5 @@ header {
 	padding-top: 20px;
 	padding-bottom: 20px;
 	background-image: url("i/heder-bg.jpg");
+	font-family: 'harmoniasanspro';
 }
