--- a/development/sass/_header.scss
+++ b/development/sass/_header.scss
@@ -2,11 +2,19 @@ header {
 	padding-top: 20px;
 	padding-bottom: 20px;
 	background-image: url("i/heder-bg.jpg");
+	background-repeat: no-repeat;
+	background-size: cover;
 	font-family: 'harmoniasanspro';
 	font-size: 15px;
 
 	.fa {
 		color: red;
 		padding-right: 10px;
+	}
+
+	.phone-box {
+		font-weight: bold;
+		font-size: 18px;
+		line-height: 20px;
 	}
 }
