--- a/development/sass/style.scss
+++ b/development/sass/style.scss
@@ -10,6 +10,7 @@ Theme Name: GulpTester
 @import "../node_modules/bootstrap/scss/_badge";
 @import "../node_modules/bootstrap/scss/_tooltip";
 @import "../node_modules/bootstrap/scss/_transitions";
+@import "../node_modules/bootstrap/scss/_navbar";
 
 
 @import "_header";
