--- a/development/sass/style.scss
+++ b/development/sass/style.scss
@@ -11,7 +11,8 @@ Theme Name: GulpTester
 @import "../node_modules/bootstrap/scss/_tooltip";
 @import "../node_modules/bootstrap/scss/_transitions";
 @import "../node_modules/bootstrap/scss/_navbar";
+@import "../node_modules/bootstrap/scss/_type";
 
 
 @import "_header";
-
+@import "section1";
