--- a/development/sass/blocks/_section1.scss
+++ b/development/sass/blocks/_section1.scss
@@ -5,12 +5,13 @@
 	background-position: center;
 	
 	.banner-cont{
-		padding-right: 400px;
+		width: 60%;
 	}
 
 	.text{
 		color: white;
 		font-size: 33.6px;
+		line-height: 44px;
 		font-family: 'harmoniasanspro';
 		font-weight: bold;
 		position:relative;
@@ -25,5 +26,30 @@
 		border-bottom:2px solid #fff;
 		content:"";
 		box-shadow: 1px 1.732px 7px rgb( 0, 0, 0 );
+	}
+
+	.zamok{
+		background-image:url('i/замок.png');
+		background-repeat: no-repeat;
+		background-position:center;
+		display: inline-block;
+		padding: 15px;
+		background-color: white;
+		border-radius: 50%;		
+		opacity: 0.8;
+		position: absolute;
+		&:hover{
+			opacity: 1;
+		}
+	}
+	.zamok1{
+		@extend .zamok;		
+		left: 1003px;
+		top: -180px;
+	}
+	.zamok2{
+		@extend .zamok;		
+		left: 803px;
+		top: -190px;
 	}
 }
