--- a/development/sass/style.scss
+++ b/development/sass/style.scss
@@ -1,18 +1,19 @@
 /*!
 Theme Name: GulpTester
 */
-@import "_variable";
+@import "variable";
 @import "../node_modules/bootstrap/scss/bootstrap-reboot";
 @import "../node_modules/bootstrap/scss/bootstrap-grid";
-@import "../node_modules/bootstrap/scss/_utilities";
-@import "../node_modules/bootstrap/scss/_buttons";
-@import "../node_modules/bootstrap/scss/_alert";
-@import "../node_modules/bootstrap/scss/_badge";
-@import "../node_modules/bootstrap/scss/_tooltip";
-@import "../node_modules/bootstrap/scss/_transitions";
-@import "../node_modules/bootstrap/scss/_navbar";
-@import "../node_modules/bootstrap/scss/_type";
+@import "../node_modules/bootstrap/scss/utilities";
+@import "../node_modules/bootstrap/scss/buttons";
+@import "../node_modules/bootstrap/scss/alert";
+@import "../node_modules/bootstrap/scss/badge";
+@import "../node_modules/bootstrap/scss/tooltip";
+@import "../node_modules/bootstrap/scss/transitions";
+@import "../node_modules/bootstrap/scss/navbar";
+@import "../node_modules/bootstrap/scss/nav";
+@import "../node_modules/bootstrap/scss/type";
 
 
-@import "_header";
-@import "section1";
+@import "blocks/header";
+@import "blocks/section1";
