--- a/development/sass/_section1.scss
+++ b/development/sass/_section1.scss
@@ -11,6 +11,7 @@
 	.text{
 		color: white;
 		font-size: 33.6px;
+		line-height: 44px;
 		font-family: 'harmoniasanspro';
 		font-weight: bold;
 		position:relative;
