--- a/development/sass/style.scss
+++ b/development/sass/style.scss
@@ -11,6 +11,7 @@ Theme Name: GulpTester
 @import "../node_modules/bootstrap/scss/_tooltip";
 @import "../node_modules/bootstrap/scss/_transitions";
 @import "../node_modules/bootstrap/scss/_navbar";
+@import "../node_modules/bootstrap/scss/_nav";
 @import "../node_modules/bootstrap/scss/_type";
 
 
