--- a/development/sass/_variable.scss
+++ b/development/sass/_variable.scss
@@ -3,6 +3,8 @@
 $brown:    #330;
 $danger:   #ff0000;
 $red: #ff0000;
+$font-family-base: 'harmoniasanspro';
+$h2-font-size: 70px;
 
 $colors: (
   "brown":      $brown
