--- a/development/sass/style.scss
+++ b/development/sass/style.scss
@@ -4,17 +4,7 @@ Theme Name: GulpTester
 @import "variable";
 @import "../node_modules/bootstrap/scss/bootstrap-reboot";
 @import "../node_modules/bootstrap/scss/bootstrap-grid";
-<<<<<<< HEAD
-@import "../node_modules/bootstrap/scss/_utilities";
-@import "../node_modules/bootstrap/scss/_buttons";
-@import "../node_modules/bootstrap/scss/_alert";
-@import "../node_modules/bootstrap/scss/_badge";
-@import "../node_modules/bootstrap/scss/_tooltip";
-@import "../node_modules/bootstrap/scss/_transitions";
-@import "../node_modules/bootstrap/scss/_navbar";
-@import "../node_modules/bootstrap/scss/_nav";
-@import "../node_modules/bootstrap/scss/_type";
-=======
+
 @import "../node_modules/bootstrap/scss/utilities";
 @import "../node_modules/bootstrap/scss/buttons";
 @import "../node_modules/bootstrap/scss/alert";
@@ -24,8 +14,9 @@ Theme Name: GulpTester
 @import "../node_modules/bootstrap/scss/navbar";
 @import "../node_modules/bootstrap/scss/nav";
 @import "../node_modules/bootstrap/scss/type";
->>>>>>> 2ae2828736b49c7d18c9c305cb7e730156b2bb9d
 
 
 @import "blocks/header";
 @import "blocks/section1";
+@import "blocks/section2";
+@import "blocks/section3";
