--- a/development/sass/blocks/_section1.scss
+++ b/development/sass/blocks/_section1.scss
@@ -1,13 +1,9 @@
 .banner{
+	height: 580px;
 	background-image: url('i/главная.jpg');
 	background-repeat: no-repeat;
-	height: 370px;
-	background-position: center;
-	
-	.banner-cont{
-		width: 60%;
-	}
-
+	background-size: cover;
+	position:relative;
 	.text{
 		color: white;
 		font-size: 33.6px;
@@ -15,6 +11,7 @@
 		font-family: 'harmoniasanspro';
 		font-weight: bold;
 		position:relative;
+		top: -30px;
 		display:inline;		
 		text-shadow: 1px 1.732px 7px rgb( 0, 0, 0 );
 	}
@@ -27,29 +24,52 @@
 		content:"";
 		box-shadow: 1px 1.732px 7px rgb( 0, 0, 0 );
 	}
-
-	.zamok{
-		background-image:url('i/замок.png');
+	.loc{
+		.zamok-test{
+			opacity: 0;
+			transition: 0.5s;
+			background-color: rgba(255,255,255,0.9);
+			font-family: 'harmoniasanspro';
+			padding: 5px 0;
+			max-width: 200px;
+			text-align:center;
+			border-radius: 5px;
+			position: relative;
+			top: -15px;
+			left: 35px;
+		}
+		.lock:hover + .zamok-test{
+			opacity: 1;
+		}
+	}
+	.lock{
+		width: 30px;
+		height: 30px;
+		display:inline-block;
+		border-radius:50%
+		background-image: url('i/замок.png');
 		background-repeat: no-repeat;
-		background-position:center;
-		display: inline-block;
-		padding: 15px;
 		background-color: white;
-		border-radius: 50%;		
+		background-position: center;
 		opacity: 0.8;
-		position: absolute;
+		transition: 0.5s;
 		&:hover{
 			opacity: 1;
 		}
 	}
-	.zamok1{
-		@extend .zamok;		
-		left: 1003px;
-		top: -180px;
+	.lock1{
+		top: 50/374*100%;
+		left: 840/1280*100%;
+		position: absolute;
 	}
-	.zamok2{
-		@extend .zamok;		
-		left: 803px;
-		top: -190px;
+	.lock2{
+		top: 200/374*100%;
+		left: 800/1280*100%;
+		position: absolute;
+	}
+	.lock3{
+		top: 70/374*100%;
+		left: 1100/1280*100%;
+		position: absolute;
 	}
 }
