--- a/development/sass/style.scss
+++ b/development/sass/style.scss
@@ -19,3 +19,5 @@ Theme Name: GulpTester
 @import "blocks/section1";
 @import "blocks/section2";
 @import "blocks/section3";
+@import "blocks/section4";
+
